--- a/newsletterhistory.html
+++ b/newsletterhistory.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Newsletter Archive</title>
     <link rel="stylesheet" href="newsletterhistory.css">
+    <link rel="icon" type="image/png" href="newsletterhistoryicon.png">
 </head>
 <body class="night-mode">
     <div class="container">
@@ -17,7 +18,11 @@
                 <button id="mode-toggle-button" onclick="toggleNightMode()">Night Mode: On</button>
             </label>
         </div>
-
+        
+        <div class="newsletter-item">
+            <div class="date">March 31, 2024</div>
+            <a href="https://shorefrontinvestments.github.io/melissahaworth/NewsletterMarch31.html" class="title">Important Announcement: Resolution of Litigation Regarding Broker Commissions</a>
+        </div>
         <div class="newsletter-item">
             <div class="date">March 24, 2024</div>
             <a href="https://shorefrontinvestments.github.io/melissahaworth/NewsletterMarch24.html" class="title">Important Update: Corporate Transparency Act and Your Small Business</a>
@@ -66,7 +71,7 @@
             <div class="date">January 07, 2024</div>
             <a href="https://shorefrontinvestments.github.io/melissahaworth/NewsletterJanuary07.html" class="title">Vacation Rental Owners: New Regulations Take Effect Feb 1st! - Act Now to Avoid Fines & Certificate Loss</a>
         </div>
-    	</div>
+    </div>
     <script>
         function toggleNightMode() {
             var body = document.body;
