--- a/newsletterhistory.html
+++ b/newsletterhistory.html
@@ -20,6 +20,14 @@
         </div>
         
         <div class="newsletter-item">
+            <div class="date">April 14, 2024</div>
+            <a href="https://shorefrontinvestments.github.io/melissahaworth/NewsletterApril14.html" class="title">(Latest) Our Latest Real Estate Venture: A Journey of Growth and Resilience</a>
+        </div>
+        <div class="newsletter-item">
+            <div class="date">April 07, 2024</div>
+            <a href="https://shorefrontinvestments.github.io/melissahaworth/NewsletterApril07.html" class="title">New Legislation Protects Property Owners' Rights</a>
+        </div>
+        <div class="newsletter-item">
             <div class="date">March 31, 2024</div>
             <a href="https://shorefrontinvestments.github.io/melissahaworth/NewsletterMarch31.html" class="title">Important Announcement: Resolution of Litigation Regarding Broker Commissions</a>
         </div>
