--- a/newsletterhistory.html
+++ b/newsletterhistory.html
@@ -20,8 +20,12 @@
         </div>
         
         <div class="newsletter-item">
+            <div class="date">April 21, 2024</div>
+            <a href="https://shorefrontinvestments.github.io/melissahaworth/NewsletterApril21.html" class="title">(Latest) Unlocking Success: Key Insights from Our Recent Podcast</a>
+        </div>
+        <div class="newsletter-item">
             <div class="date">April 14, 2024</div>
-            <a href="https://shorefrontinvestments.github.io/melissahaworth/NewsletterApril14.html" class="title">(Latest) Our Latest Real Estate Venture: A Journey of Growth and Resilience</a>
+            <a href="https://shorefrontinvestments.github.io/melissahaworth/NewsletterApril14.html" class="title">Our Latest Real Estate Venture: A Journey of Growth and Resilience</a>
         </div>
         <div class="newsletter-item">
             <div class="date">April 07, 2024</div>
