--- a/newsletterhistory.html
+++ b/newsletterhistory.html
@@ -20,8 +20,12 @@
         </div>
         
         <div class="newsletter-item">
+            <div class="date">April 28, 2024</div>
+            <a href="https://shorefrontinvestments.github.io/melissahaworth/NewsletterApril28.html" class="title">(Latest) How to Avoid Problems with Code Enforcement</a>
+        </div>
+        <div class="newsletter-item">
             <div class="date">April 21, 2024</div>
-            <a href="https://shorefrontinvestments.github.io/melissahaworth/NewsletterApril21.html" class="title">(Latest) Unlocking Success: Key Insights from Our Recent Podcast</a>
+            <a href="https://shorefrontinvestments.github.io/melissahaworth/NewsletterApril21.html" class="title">Unlocking Success: Key Insights from Our Recent Podcast</a>
         </div>
         <div class="newsletter-item">
             <div class="date">April 14, 2024</div>
