--- a/newsletterhistory.html
+++ b/newsletterhistory.html
@@ -19,8 +19,12 @@
             </label>
         </div>
         <div class="newsletter-item">
+            <div class="date">May 05, 2024</div>
+            <a href="https://shorefrontinvestments.github.io/melissahaworth/NewsletterMay05.html" class="title">(Latest) Understanding Zestimates</a>
+        </div>
+        <div class="newsletter-item">
             <div class="date">April 28, 2024</div>
-            <a href="https://shorefrontinvestments.github.io/melissahaworth/NewsletterApril28.html" class="title">(Latest) How to Avoid Problems with Code Enforcement</a>
+            <a href="https://shorefrontinvestments.github.io/melissahaworth/NewsletterApril28.html" class="title">How to Avoid Problems with Code Enforcement</a>
         </div>
         <div class="newsletter-item">
             <div class="date">April 21, 2024</div>
